refactor(NavigationView): proper theming with Controls.axaml
- Move all nav item styles to Themes/Controls.axaml
- Add NavItemSelectedBackgroundBrush to DefaultTheme.axaml
- Use CSS-like class selectors (.navItem, .selected, .badge, etc.)
- Use Classes.Add/Remove for selection state (not code-based colors)
- Add transition animations via style setters
- Clean separation: XAML defines structure, Themes define appearance

--- a/src/Modulus.UI.Avalonia/Themes/DefaultTheme.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/DefaultTheme.axaml
@@ -16,6 +16,8 @@
     <SolidColorBrush x:Key="NavItemBackgroundBrush" Color="Transparent"/>
     <SolidColorBrush x:Key="NavItemHoverBackgroundBrush" Color="#2D2D2D"/>
     <SolidColorBrush x:Key="NavItemActiveBackgroundBrush" Color="#383838"/>
+    <SolidColorBrush x:Key="NavItemSelectedBackgroundBrush" Color="#2860A0FF"/>
+    <SolidColorBrush x:Key="NavItemSelectedTextBrush" Color="#FFFFFF"/>
     <SolidColorBrush x:Key="NavItemTextBrush" Color="#B0B0B0"/>
     <SolidColorBrush x:Key="NavItemIconBrush" Color="#909090"/>
     
