--- a/src/Modulus.UI.Avalonia/Components/NavigationView.axaml
+++ b/src/Modulus.UI.Avalonia/Components/NavigationView.axaml
@@ -14,55 +14,52 @@
         <DataTemplate x:Key="MenuItemTemplate" x:DataType="ui:MenuItem">
             <StackPanel>
                 <!-- Menu Item Row -->
-                <Border CornerRadius="6" Margin="0,2" Padding="12,8"
-                        Cursor="Hand"
-                        PointerPressed="OnItemPointerPressed"
-                        Tag="{Binding}"
-                        Background="Transparent"
+                <Border Classes="navItem"
+                        Name="ItemBorder"
+                        IsEnabled="{Binding IsEnabled}"
                         ToolTip.Tip="{Binding DisplayName}"
-                        Opacity="{Binding IsEnabled, Converter={x:Static local:NavigationView.EnabledToOpacityConverter}}"
                         ContextMenu="{Binding ContextActions, Converter={x:Static local:NavigationView.ActionsToContextMenuConverter}}">
+                    <Border.Tag>
+                        <Binding Path="."/>
+                    </Border.Tag>
                     
                     <Grid ColumnDefinitions="Auto,*,Auto,Auto">
                         <!-- Icon -->
-                        <TextBlock Grid.Column="0" Text="{Binding Icon}" FontSize="16" 
-                                   VerticalAlignment="Center" Width="20" TextAlignment="Center"
+                        <TextBlock Grid.Column="0" 
+                                   Text="{Binding Icon}" 
+                                   FontSize="16" 
+                                   VerticalAlignment="Center" 
+                                   Width="20" 
+                                   TextAlignment="Center"
                                    Margin="0,0,12,0"/>
                         
                         <!-- Display Name (hidden when collapsed) -->
-                        <TextBlock Grid.Column="1" Text="{Binding DisplayName}" 
+                        <TextBlock Grid.Column="1" 
+                                   Classes="displayName"
+                                   Text="{Binding DisplayName}" 
                                    VerticalAlignment="Center"
                                    IsVisible="{Binding !#Root.IsCollapsed}"/>
                         
                         <!-- Badge -->
                         <Border Grid.Column="2" 
-                                IsVisible="{Binding BadgeCount, Converter={x:Static ObjectConverters.IsNotNull}}"
-                                Background="{DynamicResource BadgeBackgroundBrush}"
-                                CornerRadius="10" MinWidth="20" Padding="4,2" Margin="8,0"
-                                VerticalAlignment="Center">
-                            <TextBlock Text="{Binding BadgeCount}" FontSize="11" FontWeight="Bold"
-                                       Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                Classes="badge"
+                                IsVisible="{Binding BadgeCount, Converter={x:Static ObjectConverters.IsNotNull}}">
+                            <TextBlock Text="{Binding BadgeCount}"/>
                         </Border>
                         
                         <!-- Expand/Collapse Icon for groups -->
                         <TextBlock Grid.Column="3" 
+                                   Classes="chevron"
                                    Text="{Binding IsExpanded, Converter={x:Static local:NavigationView.ExpandedToChevronConverter}}"
-                                   FontSize="10" VerticalAlignment="Center"
-                                   IsVisible="{Binding Children, Converter={x:Static ObjectConverters.IsNotNull}}"
-                                   Margin="4,0,0,0"/>
+                                   IsVisible="{Binding Children, Converter={x:Static ObjectConverters.IsNotNull}}"/>
                     </Grid>
                 </Border>
                 
-                <!-- Children (when expanded) - Recursive with animation -->
-                <Border ClipToBounds="True"
+                <!-- Children (when expanded) - Recursive -->
+                <Border Classes="childContainer"
+                        ClipToBounds="True"
                         IsVisible="{Binding IsExpanded}">
-                    <Border.Transitions>
-                        <Transitions>
-                            <DoubleTransition Property="Opacity" Duration="0:0:0.15"/>
-                        </Transitions>
-                    </Border.Transitions>
-                    <ItemsControl Classes="childItems"
-                                  ItemsSource="{Binding Children}"
+                    <ItemsControl ItemsSource="{Binding Children}"
                                   ItemTemplate="{DynamicResource MenuItemTemplate}"
                                   Margin="16,0,0,0"/>
                 </Border>
@@ -70,18 +67,10 @@
         </DataTemplate>
     </UserControl.Resources>
     
-    <UserControl.Styles>
-        <!-- Override padding when collapsed -->
-        <Style Selector="local|NavigationView[IsCollapsed=True] Border.navItem">
-            <Setter Property="Padding" Value="8"/>
-        </Style>
-    </UserControl.Styles>
-    
     <ScrollViewer HorizontalScrollBarVisibility="Disabled" 
                   VerticalScrollBarVisibility="Auto">
         <ItemsControl ItemsSource="{Binding Items, ElementName=Root}"
                       ItemTemplate="{StaticResource MenuItemTemplate}">
-            <!-- Use VirtualizingStackPanel for better performance with many items -->
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <VirtualizingStackPanel/>
