refactor(NavigationView): redesign as TemplatedControl following best practices
Structure:
- Controls/NavigationView/NavigationView.cs (TemplatedControl)
- Controls/NavigationView/NavigationView.Properties.cs (AvaloniaProperty definitions)
- Controls/NavigationView/NavigationViewItem.cs + .Properties.cs

Themes:
- Themes/Generic.axaml (entry point)
- Themes/Controls/NavigationView.axaml (ControlTemplate)
- Themes/Controls/NavigationViewItem.axaml (ControlTemplate with pseudo-classes)
- Themes/Light/NavigationView.axaml (light theme overrides)
- Themes/Dark/NavigationView.axaml (dark theme overrides)

Design Tokens:
- Themes/Colors.axaml (color system)
- Themes/Typography.axaml (font sizes, weights)
- Themes/Resources.axaml (spacing, corner radius, animation)

Features:
- Uses TemplateBinding for all properties
- PART_ prefix for template parts
- Pseudo-classes for states (:selected, :expanded, :collapsed, :disabled, :hasbadge, :haschildren)
- Proper theme separation (Light/Dark)
- VirtualizingStackPanel for performance

--- a/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/ComponentsMainView.axaml
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/ComponentsMainView.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:Modulus.Modules.ComponentsDemo.ViewModels"
              xmlns:local="using:Modulus.Modules.ComponentsDemo.UI.Avalonia"
-             xmlns:nav="using:Modulus.UI.Avalonia.Components"
+             xmlns:nav="using:Modulus.UI.Avalonia.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
              x:Class="Modulus.Modules.ComponentsDemo.UI.Avalonia.ComponentsMainView"
              x:DataType="vm:ComponentsMainViewModel"
@@ -26,7 +26,7 @@
                 <!-- Using our NavigationView component -->
                 <nav:NavigationView Grid.Row="1" 
                                     Items="{Binding DemoItems}"
-                                    ItemSelected="OnNavigationItemSelected"
+                                    SelectionChanged="OnNavigationItemSelected"
                                     Margin="8,0"/>
             </Grid>
         </Border>
