--- a/src/Modulus.UI.Avalonia/Themes/Colors.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/Colors.axaml
@@ -38,13 +38,13 @@
     
     <!-- Navigation Specific -->
     <Color x:Key="NavItemBackgroundColor">Transparent</Color>
-    <Color x:Key="NavItemHoverColor">#2D2D2D</Color>
-    <Color x:Key="NavItemSelectedColor">#2A2A4A</Color>
-    <Color x:Key="NavItemActiveColor">#3D3D3D</Color>
+    <Color x:Key="NavItemHoverColor">#353540</Color>
+    <Color x:Key="NavItemSelectedColor">#4F46E5</Color>
+    <Color x:Key="NavItemActiveColor">#4338CA</Color>
     <Color x:Key="NavItemTextColor">#B0B0B0</Color>
     <Color x:Key="NavItemSelectedTextColor">#FFFFFF</Color>
-    <Color x:Key="NavItemIconColor">#808080</Color>
-    <Color x:Key="NavItemSelectedIconColor">#A5B4FC</Color>
+    <Color x:Key="NavItemIconColor">#909090</Color>
+    <Color x:Key="NavItemSelectedIconColor">#FFFFFF</Color>
     
     <!-- Badge Colors -->
     <Color x:Key="BadgeBackgroundColor">#EF4444</Color>
