fix(NavigationView): update selected colors per user request
- Light theme: #9A3DA8 (purple)
- Dark theme: #333230 (dark gray)

--- a/src/Modulus.UI.Avalonia/Themes/Dark/NavigationView.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/Dark/NavigationView.axaml
@@ -7,9 +7,9 @@
     
     <!-- Surface Colors -->
     <Color x:Key="NavItemBackgroundColor">Transparent</Color>
-    <Color x:Key="NavItemHoverColor">#353540</Color>
-    <Color x:Key="NavItemSelectedColor">#4F46E5</Color>
-    <Color x:Key="NavItemActiveColor">#4338CA</Color>
+    <Color x:Key="NavItemHoverColor">#3D3D3D</Color>
+    <Color x:Key="NavItemSelectedColor">#333230</Color>
+    <Color x:Key="NavItemActiveColor">#454340</Color>
     
     <!-- Text Colors -->
     <Color x:Key="NavItemTextColor">#B0B0B0</Color>
