fix(NavigationView): ensure Items are set when control is attached
- Remove TemplateBinding for ItemsSource (rely on code-behind)
- Add OnAttachedToVisualTree to ensure ItemsSource is set
- Fix demo NavigationView not displaying items

--- a/src/Modulus.UI.Avalonia/Themes/Controls/NavigationView.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/Controls/NavigationView.axaml
@@ -18,8 +18,7 @@
                     <ScrollViewer x:Name="PART_ScrollViewer"
                                   HorizontalScrollBarVisibility="Disabled"
                                   VerticalScrollBarVisibility="Auto">
-                        <ItemsControl x:Name="PART_ItemsHost"
-                                      ItemsSource="{TemplateBinding Items}">
+                        <ItemsControl x:Name="PART_ItemsHost">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <VirtualizingStackPanel/>
