fix: load design tokens globally in App.axaml
- Add Colors.axaml, Typography.axaml, Resources.axaml to MergedDictionaries
- Ensures NavItemPadding, CornerRadiusMedium etc. are available globally
- Fixes NavigationViewItem template rendering

--- a/src/Hosts/Modulus.Host.Avalonia/App.axaml
+++ b/src/Hosts/Modulus.Host.Avalonia/App.axaml
@@ -13,6 +13,13 @@
     
     <Application.Resources>
         <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!-- UI Library Design Tokens -->
+                <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Colors.axaml"/>
+                <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Typography.axaml"/>
+                <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Resources.axaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            
             <ResourceDictionary.ThemeDictionaries>
                 <!-- UI Library Themes -->
                 <ResourceInclude x:Key="Light" Source="avares://Modulus.UI.Avalonia/Themes/LightTheme.axaml"/>
