--- a/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/Pages/NavigationView/BadgeSample.axaml
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/Pages/NavigationView/BadgeSample.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:controls="using:Modulus.UI.Avalonia.Controls"
              mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="400"
-             x:Class="Modulus.Modules.ComponentsDemo.UI.Avalonia.Pages.BadgeDemoPage">
+             x:Class="Modulus.Modules.ComponentsDemo.UI.Avalonia.Pages.NavigationView.BadgeSample">
     
     <StackPanel Spacing="16">
         <TextBlock Text="Badge Indicators Demo"
