--- a/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/Pages/NavigationView/DisabledStateSample.axaml
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/Pages/NavigationView/DisabledStateSample.axaml
@@ -4,20 +4,20 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:controls="using:Modulus.UI.Avalonia.Controls"
              mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="400"
-             x:Class="Modulus.Modules.ComponentsDemo.UI.Avalonia.Pages.ContextMenuDemoPage">
+             x:Class="Modulus.Modules.ComponentsDemo.UI.Avalonia.Pages.NavigationView.DisabledStateSample">
     
     <StackPanel Spacing="16">
-        <TextBlock Text="Context Menu Demo"
+        <TextBlock Text="Disabled States Demo"
                    FontWeight="Bold"
                    FontSize="16"/>
         
-        <TextBlock Text="Right-click on menu items to access context menu actions:"
+        <TextBlock Text="Menu items can be disabled to prevent user interaction:"
                    TextWrapping="Wrap"/>
         
         <Border Background="#15000000"
                 CornerRadius="8"
                 Padding="8">
-            <controls:NavigationView x:Name="ContextNavView"
+            <controls:NavigationView x:Name="DisabledNavView"
                                      Width="220"
                                      Height="200"
                                      HorizontalAlignment="Left"/>
@@ -27,20 +27,11 @@
                 CornerRadius="6"
                 Padding="12">
             <StackPanel Spacing="4">
-                <TextBlock Text="Context Menu Features:" FontWeight="SemiBold"/>
-                <TextBlock Text="- ContextActions property for menu actions"/>
-                <TextBlock Text="- MenuAction with Label, Icon, and Execute"/>
-                <TextBlock Text="- Right-click triggers the context menu"/>
+                <TextBlock Text="Disabled State Features:" FontWeight="SemiBold"/>
+                <TextBlock Text="- IsEnabled property controls clickability"/>
+                <TextBlock Text="- Visual feedback with reduced opacity"/>
+                <TextBlock Text="- Cursor changes to indicate non-interactive state"/>
             </StackPanel>
-        </Border>
-        
-        <Border Background="#08000000"
-                CornerRadius="6"
-                Padding="12">
-            <TextBlock x:Name="ActionFeedback"
-                       Text="Right-click an item to see context menu"
-                       TextWrapping="Wrap"
-                       FontStyle="Italic"/>
         </Border>
     </StackPanel>
 </UserControl>
