--- a/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/Pages/NavigationView/LifecycleSample.axaml
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/Pages/NavigationView/LifecycleSample.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="400"
-             x:Class="Modulus.Modules.ComponentsDemo.UI.Avalonia.Pages.LifecycleDemoPage">
+             x:Class="Modulus.Modules.ComponentsDemo.UI.Avalonia.Pages.NavigationView.LifecycleSample">
     
     <StackPanel Spacing="16">
         <TextBlock Text="Page Lifecycle Demo"
