fix(NavigationView): add TemplateBinding for ItemsSource
- Add ItemsSource='{TemplateBinding Items}' to ItemsControl in template
- This ensures items are displayed when control is rendered
- Remove redundant resource loading from App.axaml (loaded via Generic.axaml)

--- a/src/Modulus.UI.Avalonia/Themes/Controls/NavigationView.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/Controls/NavigationView.axaml
@@ -18,7 +18,8 @@
                     <ScrollViewer x:Name="PART_ScrollViewer"
                                   HorizontalScrollBarVisibility="Disabled"
                                   VerticalScrollBarVisibility="Auto">
-                        <ItemsControl x:Name="PART_ItemsHost">
+                        <ItemsControl x:Name="PART_ItemsHost"
+                                      ItemsSource="{TemplateBinding Items}">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <VirtualizingStackPanel/>
