fix(NavigationView): use Binding instead of TemplateBinding for Items
- TemplateBinding may not work correctly with custom properties
- Use RelativeSource TemplatedParent binding for ItemsSource

--- a/src/Modulus.UI.Avalonia/Themes/Controls/NavigationView.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/Controls/NavigationView.axaml
@@ -19,7 +19,7 @@
                                   HorizontalScrollBarVisibility="Disabled"
                                   VerticalScrollBarVisibility="Auto">
                         <ItemsControl x:Name="PART_ItemsHost"
-                                      ItemsSource="{TemplateBinding Items}">
+                                      ItemsSource="{Binding Items, RelativeSource={RelativeSource TemplatedParent}}">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <VirtualizingStackPanel/>
