fix(ComponentsMainView): manually bind NavigationView.Items on DataContext change
- FindControl to get NavigationView reference by name
- Override OnDataContextChanged to manually set Items
- Add debug logging for troubleshooting
- Remove XAML binding (use code-behind instead)

--- a/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/ComponentsMainView.axaml
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/ComponentsMainView.axaml
@@ -24,8 +24,8 @@
                            Margin="16,16,16,8"/>
                 
                 <!-- Using our NavigationView component -->
-                <nav:NavigationView Grid.Row="1" 
-                                    Items="{Binding DemoItems}"
+                <nav:NavigationView x:Name="DemoNavView"
+                                    Grid.Row="1" 
                                     SelectionChanged="OnNavigationItemSelected"
                                     Margin="8,0"/>
             </Grid>
