--- a/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/ComponentsMainView.axaml
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/ComponentsMainView.axaml
@@ -26,6 +26,7 @@
                 <!-- Using our NavigationView component -->
                 <nav:NavigationView x:Name="DemoNavView"
                                     Grid.Row="1" 
+                                    Items="{Binding DemoItems}"
                                     SelectionChanged="OnNavigationItemSelected"
                                     Margin="8,0"/>
             </Grid>
